objects/MetricsAction__c.object
<CustomObject>
    <description>This table is to capture the actions performed by user.</description>
    <fields>
        <fullName>ActionPath__c</fullName>
        <label>ActionPath</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ActionType__c</fullName>
        <label>ActionType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Browser__c</fullName>
        <label>Browser</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomCreatedDate__c</fullName>
        <formula>LEFT(Text(CreatedDate), len(Text(CreatedDate))-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CustomCreatedDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeviceType__c</fullName>
        <label>DeviceType</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectId__c</fullName>
        <label>ObjectId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <label>ObjectName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OperatingSystem__c</fullName>
        <label>OperatingSystem</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PageName__c</fullName>
        <label>PageName</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Search_Text__c</fullName>
        <label>Search_Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SessionId__c</fullName>
        <label>SessionId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TabSection__c</fullName>
        <label>TabSection</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UserId</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Metrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Metric Action</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Metrics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metric Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>